--- a/sass/breakpoints/_x-small.scss
+++ b/sass/breakpoints/_x-small.scss
@@ -29,7 +29,11 @@
         flex-direction: column-reverse;
 
         .divisor-imagen {
-          flex-direction: row;
+          
+          img {
+            max-height: 9rem;
+            
+          }
         }
       }
     }
