--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -1,7 +1,7 @@
 /* ---------------- CONTACTO.HTML --------------- */
 main.contacto {
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
-             url(../assets/img/background/2.jpg);
+             url(../assets/img/background/2.webp);
   background-size: cover;
   background-position: center;
   padding-top: 3rem;
