--- a/sass/pages/_instrumentos.scss
+++ b/sass/pages/_instrumentos.scss
@@ -1,17 +1,17 @@
 /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
 main.piano {
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
-             url(../assets/img/background/1.png);
+             url(../assets/img/background/1.webp);
 }
 
 main.canto {
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
-             url(../assets/img/background/4.jpg);
+             url(../assets/img/background/4.webp);
 }
 
 main.violin {
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
-             url(../assets/img/background/1.jpg);
+             url(../assets/img/background/3.webp);
 }
 
 main#musica {
