--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -27,6 +27,10 @@ header {
       width: 6rem;
       text-align: center;
       margin: 0.2rem;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 
