--- a/sass/global/_universales.scss
+++ b/sass/global/_universales.scss
@@ -14,3 +14,12 @@
 #navbarNavAltMarkup {
   transition: 0.2s;
 }
+
+* img {
+  transition: transform 0.3s ease;
+  
+}
+
+* img:hover {
+  transform: scale(1.06);
+}
