--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -91,8 +91,18 @@ main#index .section3 {
     background-color: transparent;
     border: none;
 
-    h3 {
-      padding: 10px;
+    a.link {
+      background-color: var(--color-primero);
+      border-radius: 20px;
+      border: 1px solid var(--color-tercero);
+      padding: 1rem;
+      margin-bottom: 1rem;
+
+      &:hover {
+        color: var(--color-primero);
+        background-color: var(--color-tercero);
+        transform: scale(1.05);
+     }
     }
 
     img {
@@ -107,6 +117,12 @@ main#index .section3 {
       max-width: 700px;
       width: 80%;
       margin-top: 40px;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 }
+
+
