--- a/sass/global/_universales.scss
+++ b/sass/global/_universales.scss
@@ -10,16 +10,39 @@
   text-align: center;
 }
 
-*:hover,
-#navbarNavAltMarkup {
+* {
   transition: 0.2s;
 }
 
-* img {
-  transition: transform 0.3s ease;
-  
+@keyframes show {
+  from {
+    opacity: 0;
+    scale: 25%;
+  }
+
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
 }
 
-* img:hover {
+img {
+  transition: transform 0.3s ease;
+}
+
+img:hover {
   transform: scale(1.06);
+}
+
+
+main img,
+main p {
+  view-timeline-name:  --image;
+  view-timeline-axis: block;
+
+  animation-timeline: --image;
+  animation-name: show;
+
+  animation-range: entry 25% cover 50%;
+  animation-fill-mode: both;
 }
