--- a/sass/pages/_instrumentos.scss
+++ b/sass/pages/_instrumentos.scss
@@ -37,6 +37,10 @@ main#musica {
     margin-bottom: 2rem;
   }
 
+  .section-top {
+    padding-top: 1.8rem;
+  }
+
   /* ----------------- #MUSICA DIVISOR 1 ----------------- */
   .divisor-1 {
     width: 100%;
