--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -31,6 +31,11 @@ header {
       &:hover {
         transform: scale(1.05);
       }
+      
+      &[aria-current="page"] {
+        pointer-events: none;
+      }
+
     }
   }
 
