--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 /* Importando estilos universales */
 @import "global/universales";
+@import "global/animaciones";
 @import "../css/colores";
 @import "global/fuente-tipografica";
 @import "global/textos";
