--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ a[aria-current=page] {
 
 /* ----------------- COLOR PRIMERO ----------------- */
 .navbar-toggler,
+main .divisor2 .card a.link:hover,
 main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
@@ -90,6 +91,7 @@ header a[aria-current=page],
 header nav.navbar,
 footer,
 .main .section3 .divisor1 h2,
+.main .divisor2 .card a.link,
 main#musica .divisor-2 .section4 a,
 main.contacto .contenedor .section3 form button {
   background-color: var(--color-primero);
@@ -125,6 +127,7 @@ footer div#redes ul li a:hover {
   color: var(--color-tercero);
 }
 
+main .divisor2 .card a.link:hover,
 main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
@@ -137,11 +140,16 @@ a[aria-current=page],
 .main .section3 .divisor1 h2,
 .main .section3 .divisor2 h3,
 .main .section3 .divisor2 img,
+.main .divisor2 .card a.link,
 main#musica .divisor-1 section div img,
 main#musica .divisor-2 .section4 img,
 main.contacto .contenedor .section3 form button,
 main#musica .divisor-2 .section4 a {
   border: solid 1px var(--color-tercero);
+}
+
+.checkbox input#checkbox {
+  accent-color: var(--color-tercero);
 }
 
 /* ----------------- COLOR CUARTO ----------------- */
@@ -394,15 +402,9 @@ main#index .section3 .divisor2 .card {
   border: none;
 }
 main#index .section3 .divisor2 .card a.link {
-  background-color: var(--color-primero);
   border-radius: 20px;
-  border: 1px solid var(--color-tercero);
   padding: 1rem;
   margin-bottom: 1rem;
-}
-main#index .section3 .divisor2 .card a.link:hover {
-  color: var(--color-primero);
-  background-color: var(--color-tercero);
 }
 main#index .section3 .divisor2 .card img {
   width: 80%;
@@ -554,7 +556,6 @@ main.contacto .contenedor .section3 form .checkbox {
 }
 main.contacto .contenedor .section3 form .checkbox input#checkbox {
   width: 1.1rem;
-  accent-color: var(--color-tercero);
 }
 
 /* Importando mediaqueries */
