--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -1,4 +1,4 @@
-/* ---------------- CONTACTO.HTML --------------- */
+// CONTACTO.HTML
 main.contacto {
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
              url(../assets/img/background/2.webp);
