--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 /* Importando estilos universales */
-/* ----------------- UNIVERSALES ----------------- */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap");
 * {
   padding: 0;
@@ -17,10 +16,15 @@
   transition: 0.25s;
 }
 
+main a,
+main img,
+main iframe.mapa {
+  transition: transform 0.25s ease;
+}
 main a:hover,
 main img:hover,
 main iframe.mapa:hover {
-  transition: 0.25s;
+  transition: transform 0.25s ease;
   transform: scale(1.06);
 }
 
@@ -35,24 +39,14 @@ main iframe.mapa:hover {
   }
 }
 img,
-a,
-iframe.mapa {
-  transition: transform 0.25s ease;
-}
-
-img,
 p,
 iframe.mapa {
   view-timeline-name: --image;
   view-timeline-axis: block;
   animation-timeline: --image;
   animation-name: show;
-  animation-range: entry 20% cover 40%;
+  animation-range: entry 15% cover 40%;
   animation-fill-mode: both;
-}
-
-a[aria-current=page] {
-  pointer-events: none;
 }
 
 /* ----------------- VARIABLES COLORES PRINCIPALES MODO OSCURO  ----------------- */
@@ -158,34 +152,32 @@ main#musica .divisor-2 .section4 a {
   color: var(--color-cuarto);
 }
 
-/* ----------------- FUENTE TIPOGRAFICA DE GOOGLEFONT----------------- */
-/* ----------------- TITULOS Y TEXTOS ----------------- */
-h1,
-h2,
-h3 {
+h1, h2, h3 {
   text-transform: uppercase;
 }
 
-h1,
-h1 strong,
-h2,
-h2 strong,
-p,
-strong {
+h1, h1 strong, h2, h2 strong, p, strong {
   letter-spacing: 0.25rem;
 }
 
-h3,
-h4 {
+h3, h4 {
   letter-spacing: 0.125rem;
 }
 
 h1 {
   font-size: 2.5rem;
+  font-weight: 500;
+}
+h1 strong {
+  font-weight: 500;
 }
 
 h2 {
   font-size: 2rem;
+  font-weight: 500;
+}
+h2 strong {
+  font-weight: 500;
 }
 
 h3 {
@@ -198,16 +190,9 @@ h4 {
 
 p {
   font-size: 1.2rem;
+  font-weight: 400;
 }
 
-h1,
-h1 strong,
-h2,
-h2 strong {
-  font-weight: 500;
-}
-
-p,
 strong {
   font-weight: 400;
 }
@@ -227,9 +212,9 @@ a {
 .toggleLight {
   cursor: pointer;
   position: fixed;
-  z-index: 9999;
   top: 17px;
   left: 10px;
+  z-index: 9999;
 }
 
 .toggleDark,
@@ -267,14 +252,23 @@ header .navbar-nav a {
   text-align: center;
   margin: 0.2rem;
 }
+header .navbar-nav a[aria-current=page] {
+  pointer-events: none;
+}
 header .logo-2 {
   display: none;
 }
 
-/* ----------------- GENERALES ----------------- */
 main {
   width: 100%;
   min-height: 100vh;
+}
+
+#carouselExampleAutoplaying .carousel-item img {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  min-height: 200px;
 }
 
 .main .section2 .divisor img,
@@ -290,19 +284,11 @@ main.contacto .contenedor .section3 form button {
   border-radius: 20px;
 }
 
-#carouselExampleAutoplaying .carousel-item img {
-  object-fit: cover;
-  width: 100%;
-  height: auto;
-  min-height: 200px;
-}
-
-/* ----------------- FOOTER ----------------- */
 footer {
   display: flex;
   justify-content: space-between;
-  padding: 0.8rem;
   align-items: center;
+  padding: 0.8rem;
   width: 100%;
   height: 4rem;
 }
@@ -322,7 +308,6 @@ footer h4 {
 }
 
 /* Importando estilos en páginas */
-/* ----------------- INDEX.HTML ----------------- */
 main#index {
   padding-top: 1.8rem;
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/1.webp);
@@ -330,7 +315,6 @@ main#index {
   background-position: center;
 }
 
-/* ----------------- INDEX.HTML SECCION 1----------------- */
 main#index .section1 {
   width: 100%;
   max-width: 1000px;
@@ -341,7 +325,6 @@ main#index .section1 {
   margin: auto;
 }
 
-/* ----------------- INDEX.HTML SECCION 2----------------- */
 main#index .section2 {
   width: 100%;
   max-width: 1000px;
@@ -373,7 +356,6 @@ main#index .section2 .divisor .divisor-texto h3 {
   padding-bottom: 10px;
 }
 
-/* ----------------- INDEX.HTML SECCION 3 ----------------- */
 main#index .section3 {
   width: 100%;
   padding-left: 1rem;
@@ -418,7 +400,6 @@ main#index .section3 .divisor3 .mapa {
   margin-top: 40px;
 }
 
-/* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
 main.piano {
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/1.webp);
 }
@@ -434,8 +415,6 @@ main.violin {
 main#musica {
   background-size: cover;
   background-position: center;
-  /* ----------------- #MUSICA DIVISOR 1 ----------------- */
-  /* ----------------- #MUSICA DIVISOR 2 ----------------- */
 }
 main#musica h1,
 main#musica h3 {
@@ -490,7 +469,6 @@ main#musica .divisor-2 .section4 a {
   letter-spacing: 1px;
 }
 
-/* ---------------- CONTACTO.HTML --------------- */
 main.contacto {
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/2.webp);
   background-size: cover;
@@ -559,24 +537,19 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
 }
 
 /* Importando mediaqueries */
-/* ----------------- MEDIAQUERIES 992px ----------------- */
 @media (max-width: 992px) {
-  /* ----------------- INDEX.HTML----------------- */
   .main .section2 {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
   }
-  /* ----------------- CONTACTO.HTML ----------------- */
   main.contacto .contenedor {
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "section1 section3" "section2 section3";
     align-items: self-start;
   }
 }
-/* ----------------- MEDIAQUERIES 768px ----------------- */
 @media (max-width: 768px) {
-  /* ----------------- TITULOS Y TEXTOS ----------------- */
   h1,
   h1 strong,
   h2,
@@ -586,7 +559,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   p {
     font-size: 0.95rem;
   }
-  /* ----------------- INDEX.HTML ----------------- */
   .main .section3 .divisor3 .mapa {
     height: 15rem;
   }
@@ -596,7 +568,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   .main .section3 .divisor2 .row .card.col-lg-4.col-sm-12 .card .row .col-lg-12.col-sm-6 .card-img-top {
     max-width: 60%;
   }
-  /* ----------------- CONTACTO.HTML----------------- */
   main.contacto .contenedor {
     position: static;
     grid-template-columns: repeat(1, 1fr);
@@ -615,13 +586,10 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     margin-right: 0;
   }
 }
-/* ----------------- MEDIAQUERIES 576px----------------- */
 @media (max-width: 576px) {
-  /* ----------------- FOOTER ----------------- */
   footer div#redes ul {
     gap: 1rem;
   }
-  /* ----------------- TITULOS Y TEXTOS ----------------- */
   h1,
   h1 strong,
   h2,
@@ -632,7 +600,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main#musica .divisor-2 .section3 a {
     font-size: 0.9rem;
   }
-  /* ----------------- INDEX.HTML ----------------- */
   .main .section2 .divisor {
     display: flex;
     flex-direction: column-reverse;
@@ -640,7 +607,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   .main .section2 .divisor .divisor-imagen img {
     max-height: 9rem;
   }
-  /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
   main#musica h1,
   main#musica h3 {
     width: auto;
@@ -671,16 +637,13 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     width: 30%;
     margin: auto;
   }
-  /* ----------------- CONTACTO.HTML----------------- */
   main.contacto .contenedor .section3 form input,
   main.contacto .contenedor .section3 form textarea {
     width: 80%;
     padding: 0;
   }
 }
-/* ----------------- MEDIAQUERIES 290px----------------- */
 @media (max-width: 290px) {
-  /* ----------------- HEADER ----------------- */
   header .logo {
     display: none;
   }
@@ -700,12 +663,10 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     font-size: 0.6rem;
     width: auto;
   }
-  /* ----------------- FOOTER ----------------- */
   footer {
     flex-direction: column;
     height: 6rem;
   }
-  /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
   main#musica {
     margin: 0;
     padding: 0;
@@ -730,7 +691,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main#musica .divisor-2 .section4 img {
     width: 90%;
   }
-  /* ----------------- CONTACTO ----------------- */
   main.contacto .contenedor .section3 form {
     width: 100%;
     flex-direction: column;
