--- a/sass/components/_toggle.scss
+++ b/sass/components/_toggle.scss
@@ -1,23 +1,49 @@
+// Mixin para visibilidad
+@mixin visibility($visibility) {
+  visibility: $visibility;
+}
+
+// Mixin para cursor
+@mixin cursor($cursor) {
+  cursor: $cursor;
+}
+
+// Mixin para posición
+@mixin position($position, $top: null, $left: null, $zIndex: null) {
+  position: $position;
+  @if $top != null {
+    top: $top;
+  }
+  @if $left != null {
+    left: $left;
+  }
+  @if $zIndex != null {
+    z-index: $zIndex;
+  }
+}
+
+// Mixin para display
+@mixin display($display) {
+  display: $display;
+}
+
 /* ------------ MODO OSCURO/CLARO ------------ */
 #toggleMode {
-  visibility: hidden;
+  @include visibility(hidden);
 }
 
 .toggleDark,
 .toggleLight {
-  cursor: pointer;
-  position: fixed;
-  z-index: 9999;
-  top: 17px;
-  left: 10px;
+  @include cursor(pointer);
+  @include position(fixed, 17px, 10px, 9999);
 }
 
 .toggleDark,
 #toggleMode:checked ~ .toggleLight {
-  display: block;
+  @include display(block);
 }
 
 .toggleLight,
 #toggleMode:checked ~ .toggleDark {
-  display: none;
+  @include display(none);
 }
