--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,4 +1,4 @@
-/* ----------------- INDEX.HTML ----------------- */
+// INDEX.HTML 
 main#index {
   padding-top: 1.8rem;
   background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
@@ -8,7 +8,7 @@ main#index {
 
 }
 
-/* ----------------- INDEX.HTML SECCION 1----------------- */
+// INDEX.HTML SECCION 1
 main#index .section1 {
   width: 100%;
   max-width: 1000px;
@@ -19,7 +19,7 @@ main#index .section1 {
   margin: auto;
 }
 
-/* ----------------- INDEX.HTML SECCION 2----------------- */
+// INDEX.HTML SECCION 2
 main#index .section2 {
   width: 100%;
   max-width: 1000px;
@@ -55,7 +55,7 @@ main#index .section2 {
   }
 }
 
-/* ----------------- INDEX.HTML SECCION 3 ----------------- */
+// INDEX.HTML SECCION 3
 main#index .section3 {
   width: 100%;
   padding-left: 1rem;
