--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,41 @@ iframe.mapa {
   animation-fill-mode: both;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  1% {
+    opacity: 0;
+    visibility: visible;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.fade-in-image {
+  opacity: 0;
+  visibility: hidden;
+  animation: fadeIn 2s forwards;
+}
+
+.section1 {
+  animation-delay: 0.4s;
+  animation-fill-mode: forwards;
+}
+
+.section2 {
+  animation-delay: 0.8s;
+  animation-fill-mode: forwards;
+}
+
+.section3 {
+  animation-delay: 1.2s;
+  animation-fill-mode: forwards;
+}
+
 /* ----------------- VARIABLES COLORES PRINCIPALES MODO OSCURO  ----------------- */
 :root {
   --color-primero: rgb(27, 26, 25);
