--- a/sass/global/_animaciones.scss
+++ b/sass/global/_animaciones.scss
@@ -49,7 +49,6 @@ main {
 }
 
 // Estilos para img, p, iframe.mapa
-
 img,
 p,
 iframe.mapa {
@@ -59,4 +58,39 @@ iframe.mapa {
 }
 
 
+// Keyframes para animación fade contacto.html
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  1% {
+    opacity: 0;
+    visibility: visible;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
 
+.fade-in-image { 
+  opacity: 0;
+  visibility: hidden;
+  animation: fadeIn 2s forwards;
+}
+
+.section1 {
+  animation-delay: 0.4s;
+  animation-fill-mode: forwards;
+}
+
+.section2 {
+  animation-delay: 0.8s;
+  animation-fill-mode: forwards;
+}
+
+.section3 {
+  animation-delay: 1.2s;
+  animation-fill-mode: forwards;
+}
